---------------------------------------------------------------------------------------------------
Version: 4.1.12
Date: 2021.03.xx
  Changes:
      - Moved all Pure omnitraction 1 tier up. You cant jump through impure omnitractions now :)
      - Removed the "omnimatter-tier-impure-dependency" setting
---------------------------------------------------------------------------------------------------
Version: 4.1.11
Date: 2021.03.08
  Info:
    - Moved Angels component mode "omniblocks" from lib to matter
  Bugfixes:
    - Fixed various setting description typos and wrong numbers
---------------------------------------------------------------------------------------------------
Version: 4.1.10
Date: 2021.02.25
  Bugfixes:
    - Fixed that oil-processing had a hidden prerequisite with certain mods
---------------------------------------------------------------------------------------------------
Version: 4.1.9
Date: 2021.02.11
  Info:
    - Added omni.matter.add_ignore_resource(name) and omni.matter.remove_ignore_resource(name)
    - Mods can access those to have control over what gets (not) ignored by our autoplace removal
  Changes:
    - Angels industries tech overhaul setting is now hidden and forced to false
    - Various settings related to ore spawning that have no functionality with omni are now hidden
---------------------------------------------------------------------------------------------------
Version: 4.1.8
Date: 2021.01.21
  Info:
    - Moved the following functions/ tables into omnimatters namespace
    - (from omni.fname to omni.matter.fname) :
    - omnisource, omnitial, omnifluid, add_resource(), remove_resource(), add_fluid(),
    - remove_fluid(), get_ore_tier(), set_ore_tier(), add_initial(), add_omniwater_extraction()
  Bugfixes:
    - Fixed that omnitiles used the stone path transitions
    - Complete rewrite of omnite´s autoplace control
    - Fixes infinite omnite spawing in the starting area