@@ -124,7 +124,7 @@ omnimatter-infinite-omnic-acid=Infinite patches requires omnic acid.
 omnimatter-max-tier=Omnitractor Max Tier
 omnimatter-pure-lvl-per-tier=Number of pure extraction techs between each tier.
 omnimatter-tier-pure-dependency=Pure level for next tier.
-omnimatter-impure-lvl-per-tier=Number of impure techs.
+omnimatter-impure-lvls=Number of impure techs.
 omnimatter-fluid-lvl-per-tier=Number of fluid levels per tier.
 omnimatter-fluid-lvl=Number of fluid levels.
 omnimatter-fluid-dependency=Tier dependency on fluid.
@@ -141,7 +141,7 @@ omnimatter-infinite-omnic-acid=If enabled, infinite omnite will require omnic ac
 omnimatter-max-tier=Sets the max tier of omnitractors. Can be between 3 and 8.
 omnimatter-pure-lvl-per-tier=Sets the number of pure extraction techs for each ore between each omnitractor tier. Can be between 2 and 6.
 omnimatter-tier-pure-dependency=At this level of pure tech the next tier of omnitractor is researchable. Can be between 1 and 6.
-omnimatter-impure-lvl-per-tier=Sets the number of impure extraction techs for each ore. Can be between 2 and 6.
+omnimatter-impure-lvls=Sets the number of impure extraction techs for each ore. Can be between 2 and 6.
 omnimatter-fluid-lvl-per-tier=Sets the number of fluid extraction techs for each fluid between each omnitractor tier. Can be between 1 and 3.
 omnimatter-fluid-lvl=Sets the number of fluid extraction techs required to reach maximum efficiency.(Sets the max amount of fluid level techs!) Can be between 2 and 10.
 omnimatter-fluid-dependency=At this level of fluid tech the next tier of omnitractor is researchable. Can be between 1 and 10.
