@@ -43,9 +43,9 @@ data:extend({
   },
   {
     type = "int-setting",
-    name = "omnimatter-impure-lvl-per-tier",
+    name = "omnimatter-impure-lvls",
     setting_type = "startup",
-    default_value = 2,
+    default_value = 4,
     maximum_value = 6,
     minimum_value = 2,
     per_user = false,
